# ParseAI

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py  models.py
backend/app/routes/: chat.py  documents.py
backend/app/services/: embeddings.py  ingest.py  llm.py  pdf_parse.py  quota.py  ratelimit.py  retrieve.py  users.py  vectorstore.py
backend/migrations/: 001_init.sql
backend/tests/: conftest.py  test_auth.py  test_config.py  test_db.py  test_embeddings.py  test_health.py  test_ingest.py  test_llm.py  test_pdf_parse.py  test_quota.py  test_ratelimit.py  test_retrieve.py  test_routes_chat.py  test_routes_documents.py  test_users.py  test_vectorstore.py
docs/: BACKEND.md
docs/superpowers/plans/: 2026-04-27-parsewithai-mvp.md
docs/superpowers/specs/: 2026-04-27-parsewithai-design.md
frontend/: package-lock.json  package.json  proxy.ts  vitest.config.ts
frontend/__tests__/components/: ChatWindow.test.tsx  DocList.test.tsx  UploadDropzone.test.tsx
frontend/__tests__/lib/: api.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/[docId]/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: AppHeader.tsx  ChatWindow.tsx  ConfirmDialog.tsx  DocList.tsx  MessageBubble.tsx  QueryProvider.tsx  SourceCitation.tsx  ThemeProvider.tsx  ThemeToggle.tsx  UndoToast.tsx  UploadDropzone.tsx  UploadProgress.tsx
frontend/components/ui/: button.tsx  input.tsx
frontend/lib/: api.ts  streamChat.ts  types.ts
(+2 files in other folders)
